Fixed header from getting too small

--- a/src/routes/layout.css
+++ b/src/routes/layout.css
@@ -10,7 +10,7 @@
 .layoutContainer {
 	display: grid;
 	grid-template-columns: 250px 1fr 350px;
-	grid-template-rows: 10vh 1fr 10vh;
+	grid-template-rows: auto 1fr auto;
 	/* justify-content: center; */
 	grid-template-areas:
 		'header header header'
